config/cert-manager.yml
# Install cert-manager, which manages HTTPS certificates across a cluster
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    name: cert-manager
