config/git-receiver.yml
apiVersion: v1
kind: Service
metadata:
  name: receiver
  namespace: flux-system
spec:
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9292
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - flux-webhook.ael.red
      secretName: webhook-receiver-tls
  rules:
  - host: flux-webhook.ael.red
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
