config/webhook-listener.yml
# Listen externally for webhook calls
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webhook-receiver
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.middlewares: redirect-https@kubernetescrd
spec:
  rules:
  - host: webhooks.flux.ael.red
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: webhook-receiver
            port:
              number: 80
  tls:
    - secretName: webhook-receiver-tls
      hosts:
        - webhooks.flux.ael.red
