config/allow-nginx-controller.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-controller
  namespace: flux-system
spec:
  podSelector: {}
  ingress:
    - {}
  policyTypes:
  - Ingress
